Remove Java 11 target, switch usage of Path to Paths