@@ -12,6 +12,7 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.File;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.UUID;
 
 @RestController
@@ -25,10 +26,9 @@ public class MediaController {
         try {
             String tmpDir = System.getProperty("java.io.tmpdir");
             String fileName = UUID.randomUUID().toString().replace("-", "");
-            Path filePath = Path.of(tmpDir, fileName);
-            File tmpFile = new File(filePath.toString());
-            file.transferTo(tmpFile);
-            s3Repository.uploadObject(fileName, tmpFile);
+            Path filePath = Paths.get(tmpDir, fileName);
+            file.transferTo(filePath);
+            s3Repository.uploadObject(fileName, filePath.toFile());
             return new ResponseEntity<>(fileName, HttpStatus.OK);
         } catch (Exception e) {
             return new ResponseEntity<>("Unable to upload.", HttpStatus.BAD_REQUEST);
